@@ -331,8 +331,44 @@
                         {
                             "sn": "B1",
                             "name": "KCl",
-                            "source_type": "1",
-                            "source_name": "录入",
+                            "source_type": "2",
+                            "source_name": "引用",
+                            "source_sn": "",
+                            "row": "2",
+                            "col": "B",
+                            "colspan": 5,
+                            "rowspan": 1,
+                            "source_data": ""
+                        },
+                        {
+                            "sn": "B1",
+                            "name": "KCl",
+                            "source_type": "3",
+                            "source_name": "日期",
+                            "source_sn": "",
+                            "row": "2",
+                            "col": "B",
+                            "colspan": 5,
+                            "rowspan": 1,
+                            "source_data": ""
+                        },
+                        {
+                            "sn": "B1",
+                            "name": "KCl",
+                            "source_type": "4",
+                            "source_name": "参数表",
+                            "source_sn": "",
+                            "row": "2",
+                            "col": "B",
+                            "colspan": 5,
+                            "rowspan": 1,
+                            "source_data": ""
+                        },
+                        {
+                            "sn": "B1",
+                            "name": "KCl",
+                            "source_type": "5",
+                            "source_name": "公式",
                             "source_sn": "",
                             "row": "2",
                             "col": "B",
