@@ -11,11 +11,41 @@
         </div>
         <div *ngFor="let array_key of getKeys(model.arrays)">
             <div *ngFor="let array_cell of model.arrays[array_key].cell_list">
-                <mat-grid-tile
+                <mat-grid-tile *ngIf="array_cell.row == 1; else space"
                     [colspan]="array_cell.colspan"
                     [rowspan]="array_cell.rowspan">
                         {{array_cell.name}}
+                        {{array_cell.rowspan}}
+                        {{array_cell.colspan}}
                 </mat-grid-tile>
+                <ng-template #space>
+                    <mat-grid-tile  [ngSwitch]="array_cell.source_type" [colspan]="array_cell.colspan" [rowspan]="array_cell.rowspan">
+                        <div *ngSwitchCase="1">
+                            <!-- <form>
+                                <mat-form-field> -->
+                                    <input placeholder="录入数据">
+                                <!-- </mat-form-field>                            
+                            </form> -->
+                        </div>
+                        <div *ngSwitchCase="2">
+                            <button>引用数据源</button>
+                        </div>
+                        <div *ngSwitchCase="3">
+                            <mat-form-field>
+                                <input matInput [matDatepicker]="picker" placeholder="Choose a date">
+                                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                                <mat-datepicker #picker></mat-datepicker>
+                            </mat-form-field>
+                        </div>
+                        <div *ngSwitchCase="4">
+                            <button>选择参数表</button>
+                        </div>
+                        <div *ngSwitchCase="5">
+                            <button>创建公式</button>
+                        </div>
+                        <div *ngSwitchDefault>Null</div>
+                    </mat-grid-tile>
+                </ng-template>
             </div>
         </div>
     </mat-grid-list>
